langda/history/DoubleDC_5Round/test_history/pl___robot:rough.pl_run5/#test_results_result.txt
Error evaluating Problog model:
    target = self.ground(db, query, target, label=label)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine.py", line 341, in ground
    raise NonGroundQuery(term, db.lineno(term.location))
problog.errors.NonGroundQuery: Query term still contains variables after grounding for query at(X3,X4,s(s(s(0)))) at 51:7.